[project]
name = "formidium-api-python"
version = "0.1.0"
description = "A python wrapper for Formidium API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=43.0.3",
    "requests>=2.32.3",
    "tzlocal>=5.2",
]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
env_files = ".env"

[tool.uv]
dev-dependencies = [
    "pytest-dotenv>=0.5.2",
    "pytest>=8.3.3",
]
